# event_vendor

./: .gitignore  QUICKSTART.md  SETUP_COMMANDS.md  fix_slugs.py  main.py  pyproject.toml
event/: .env  .env.example  .gitignore  CHATBOT_SETUP.md  CLAUDE.md  README.md  SETUP.md  db.sqlite3  main.py  pyproject.toml  requirement.txt  requirements.txt
event/accounts/: admin.py  forms.py  models.py  urls.py  views.py
event/accounts/migrations/: 0001_initial.py
event/admin_panel/: decorators.py  urls.py  views.py
event/billing/: admin.py  models.py  urls.py  views.py
event/billing/migrations/: 0001_initial.py  0002_initial.py
event/categories/: admin.py  models.py
event/categories/migrations/: 0001_initial.py  0002_category_image_alter_category_icon.py
event/chatbot/: admin.py  ai_service.py  emails.py  models.py  urls.py  views.py
event/chatbot/migrations/: 0001_initial.py
event/event/: settings.py  urls.py
event/leads/: admin.py  forms.py  models.py  urls.py  views.py
event/leads/migrations/: 0001_initial.py  0002_lead_event_type_lead_notes_alter_lead_contact_method_and_more.py
event/reviews/: admin.py  forms.py  models.py  urls.py  views.py
event/reviews/migrations/: 0001_initial.py
event/static/css/: admin_panel.css
event/templates/: base.html  home.html
event/templates/accounts/: favorites.html  login.html  profile.html  register.html
event/templates/admin_panel/: base.html  dashboard.html
event/templates/billing/: cancel_subscription.html  (+3 more)
event/vendors/: admin.py  emails.py  forms.py  geo_utils.py  models.py  urls.py  views.py
(+47 files in other folders)
