[project]
name = "event"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3==1.34.28",
    "crispy-bootstrap5>=2.0",
    "django>=5.0,<6.0",
    "django-cors-headers>=4.3.1",
    "django-crispy-forms==2.1",
    "django-storages==1.14.2",
    "geopy==2.4.1",
    "groq>=0.5.0",
    "gunicorn==21.2.0",
    "openai>=2.9.0",
    "pillow>=10.4.0",
    "psycopg2-binary>=2.9.9",
    "pypaystack2>=1.1.0",
    "python-dotenv==1.0.0",
    "whitenoise==6.6.0",
]
